--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "next": "^15.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-parallax": "^3.5.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.8"
