--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@tabler/icons-react": "^3.30.0",
     "@tailwindcss/vite": "^4.0.8",
     "clsx": "^2.1.1",
@@ -17,6 +18,7 @@
     "lucide-react": "^0.475.0",
     "next": "^15.1.7",
     "react": "^18.3.1",
+    "react-calendly": "^4.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-parallax": "^3.5.1",
